--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-base64": "^0.2.1",
     "react-native-ble-manager": "^8.8.0",
     "react-native-ble-plx": "^2.0.3",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.6.0",
     "react-native-gifted-charts": "^1.2.42",
     "react-native-linear-gradient": "^2.6.2",
