--- a/ios/Podfile
+++ b/ios/Podfile
@@ -10,6 +10,7 @@ ENV['RCT_NEW_ARCH_ENABLED'] = podfile_properties['newArchEnabled'] == 'true' ? '
 platform :ios, podfile_properties['ios.deploymentTarget'] || '13.0'
 install! 'cocoapods',
   :deterministic_uuids => false
+  pod 'GoogleUtilities', :modular_headers => true;
 
 prepare_react_native_project!
 
