--- a/package.json
+++ b/package.json
@@ -16,16 +16,22 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-firebase/app": "^17.3.2",
+    "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.2",
     "expo": "^48.0.0",
     "expo-constants": "~14.2.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^9.17.2",
+    "moti": "^0.24.2",
     "native-base": "3.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-app-intro-slider": "^4.0.4",
     "react-native-awesome-alerts": "^2.0.0",
     "react-native-base64": "^0.2.1",
     "react-native-ble-manager": "^8.8.0",
@@ -34,6 +40,7 @@
     "react-native-gesture-handler": "^2.6.0",
     "react-native-gifted-charts": "^1.2.42",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "13.4.0",
