error reducer context user not defined

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -113,7 +113,7 @@ android {
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
-    namespace "com.aledrusappnew"
+    namespace "com.aledrus"
     defaultConfig {
         applicationId 'com.alEdrusAppNew'
         minSdkVersion rootProject.ext.minSdkVersion
