--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "alEdrusAppNew",
+    "name": "Al Edrus",
     "slug": "alEdrusAppNew",
     "version": "1.0.0",
     "orientation": "portrait",
