--- a/eas.json
+++ b/eas.json
@@ -19,6 +19,12 @@
         "resourceClass": "m-medium"
       }
     },
+    "preview2": {
+      "android": {
+        "gradleCommand": ":app:assembleRelease",
+        "buildType": "apk"
+      }
+    },
     "production": {
       "ios": {
         "resourceClass": "m-medium"
