--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-firebase/app": "^17.3.2",
+    "@react-native-async-storage/async-storage": "^1.17.12",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.2",
+    "dayjs": "^1.11.7",
     "expo": "^48.0.0",
     "expo-constants": "~14.2.1",
     "expo-splash-screen": "~0.18.1",
