--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.2",
+    "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "expo": "^48.0.0",
     "expo-constants": "~14.2.1",
+    "expo-location": "~15.1.1",
+    "expo-modules-core": "^1.2.6",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.17.2",
