--- a/ios/AlEdrus/Info.plist
+++ b/ios/AlEdrus/Info.plist
@@ -29,12 +29,6 @@
         </array>
       </dict>
     </array>
-    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-    <string>Allow Al Edrus to use your location to provide accurate prayer times</string>
-    <key>NSLocationAlwaysUsageDescription</key>
-    <string>Allow Al Edrus to use your location to provide accurate prayer times</string>
-    <key>NSLocationWhenInUseUsageDescription</key>
-    <string>Allow Al Edrus to use your location to provide accurate prayer times</string>
     <key>CFBundleVersion</key>
     <string>1</string>
     <key>LSRequiresIPhoneOS</key>
@@ -52,6 +46,12 @@
         </dict>
       </dict>
     </dict>
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>Allow $(PRODUCT_NAME) to access your location</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>Allow $(PRODUCT_NAME) to access your location</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>Allow $(PRODUCT_NAME) to access your location</string>
     <key>UILaunchStoryboardName</key>
     <string>SplashScreen</string>
     <key>UIRequiredDeviceCapabilities</key>
