--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@react-navigation/stack": "^6.3.2",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
-    "expo": "^48.0.0",
+    "eas-cli": "^3.8.1",
+    "expo": "~48.0.9",
+    "expo-cli": "^6.3.2",
     "expo-constants": "~14.2.1",
     "expo-location": "~15.1.1",
     "expo-modules-core": "^1.2.6",
@@ -34,7 +36,7 @@
     "native-base": "3.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.3",
+    "react-native": "0.71.4",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-awesome-alerts": "^2.0.0",
     "react-native-base64": "^0.2.1",
