--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-constants": "~14.2.1",
     "expo-location": "~15.1.1",
     "expo-modules-core": "^1.2.6",
+    "expo-sensors": "~12.1.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.17.2",
@@ -43,6 +44,7 @@
     "react-native-ble-manager": "^8.8.0",
     "react-native-ble-plx": "^2.0.3",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-compass-heading": "^1.4.2",
     "react-native-gesture-handler": "^2.6.0",
     "react-native-gifted-charts": "^1.2.42",
     "react-native-linear-gradient": "^2.6.2",
