--- a/app.json
+++ b/app.json
@@ -4,6 +4,8 @@
     "slug": "alEdrusAppNew",
     "version": "1.0.0",
     "orientation": "portrait",
+    "userInterfaceStyle": "light",
+    "jsEngine": "hermes",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
