--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "android:build-locally": "eas build --profile development --platform android",
+    "android:build-apk": "eas build -p android --profile preview",
+    "ios:release-local": "expo run:ios --configuration Release",
+    "android:build": "eas build --platform android",
+    "ios:build": "eas build --platform ios",
+    "ios:submit": "eas submit -p ios --latest"
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
@@ -24,19 +30,20 @@
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "eas-cli": "^3.8.1",
-    "expo": "~48.0.9",
+    "expo": "33.0.0",
     "expo-cli": "^6.3.2",
     "expo-constants": "~14.2.1",
     "expo-location": "~15.1.1",
-    "expo-modules-core": "^1.2.6",
+    "expo-modules-core": "1.0.3",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.17.2",
     "moti": "^0.24.2",
     "native-base": "3.4.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.71.4",
+    "npm": "^9.5.1",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.6",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-awesome-alerts": "^2.0.0",
     "react-native-base64": "^0.2.1",
@@ -56,10 +63,10 @@
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
-  "bugs": {
-    "url": "https://github.com/GeekyAnts/nativebase-templates/issues"
+  "expo-yarn-workspaces": {
+    "symlinks": [
+      "expo-constants"
+    ]
   },
-  "homepage": "https://github.com/GeekyAnts/nativebase-templates#readme",
-  "author": "Aditya Jamuar",
   "private": true
 }
