--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-constants": "~14.2.1",
     "expo-location": "~15.1.1",
     "expo-modules-core": "^1.2.6",
+    "expo-notifications": "~0.18.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.17.2",
