--- a/ios/AlEdrus/Supporting/Expo.plist
+++ b/ios/AlEdrus/Supporting/Expo.plist
@@ -8,9 +8,9 @@
     <true/>
     <key>EXUpdatesLaunchWaitMs</key>
     <integer>0</integer>
-    <key>EXUpdatesSDKVersion</key>
-    <string>48.0.0</string>
     <key>EXUpdatesURL</key>
-    <string>https://exp.host/@reinhartsamuel/alEdrusAppNew</string>
+    <string>https://u.expo.dev/514e3c6a-0a1b-498d-92a0-12feca678c96</string>
+    <key>EXUpdatesRuntimeVersion</key>
+    <string>1.0.0</string>
   </dict>
 </plist>
