--- a/package.json
+++ b/package.json
@@ -24,14 +24,16 @@
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "eas-cli": "^3.8.1",
-    "expo": "~48.0.9",
+    "expo": "^48.0.0",
     "expo-cli": "^6.3.2",
     "expo-constants": "~14.2.1",
+    "expo-device": "~5.2.1",
     "expo-location": "~15.1.1",
     "expo-modules-core": "^1.2.6",
     "expo-notifications": "~0.18.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.3",
     "firebase": "^9.17.2",
     "moti": "^0.24.2",
     "native-base": "3.4.0",
