--- a/app.json
+++ b/app.json
@@ -12,7 +12,7 @@
     },
     "updates": {
       "fallbackToCacheTimeout": 0,
-      "url": "https://u.expo.dev/514e3c6a-0a1b-498d-92a0-12feca678c96"
+      "url": "https://u.expo.dev/0fa8652b-f953-4f4a-8736-6e1ddd8a1e7d"
     },
     "assetBundlePatterns": [
       "**/*"
@@ -26,14 +26,16 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#054705"
       },
-      "package": "com.aledrus"
-    },
+      "package": "com.aledrus",
+      "splash" : "./assets/splash.png",
+      "resizeMode" : "cover"
+     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "extra": {
       "eas": {
-        "projectId": "514e3c6a-0a1b-498d-92a0-12feca678c96"
+        "projectId": "0fa8652b-f953-4f4a-8736-6e1ddd8a1e7d"
       }
     },
     "runtimeVersion": "1.0.0"
